# goit-pythonweb-hw-012

./: README.md  alembic.ini  crud.py  database.py  main.py  models.py  py_test.py  pyproject.toml  schemas.py
alembic/: env.py
source/: conf.py  database.rst  index.rst  main.rst  models.rst
tests/: test_crud.py  test_database.py  test_main.py  test_models.py  test_schemas.py
